--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -119,7 +119,7 @@ body {
 }
 
 .section-playlist__content .subtitle{
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 12px;
   
 }
@@ -166,4 +166,58 @@ body {
   margin: 8px;
   padding: 8px;
   border-radius: 20px;
+}
+
+.footercontainer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px 40px;
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(to right, #ae2896, #509bf5);
+  cursor: pointer;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.footertext{
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#texttop {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+#textbot{
+ color: #fff; 
+ font-weight: 500;
+ font-size: 14px;
+
+}
+
+.footerbutton {
+  background-color: #fff;
+  color: #000000;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 14px 30px;
+  border: 0;
+  border-radius: 40px;
+  cursor: pointer;
+  flex-shrink: 0;
+
+}
+
+.footerbutton:hover {
+  scale: 1.05;
+
 }
