--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -18,7 +18,7 @@ body {
   padding: 16px 0 0 16px;
 }
 
-.sidebar_navigation .logo  {
+.sidebar_navigation .logo {
   background-color: #121212;
   display: flex;
   border-radius: 8px;
@@ -32,7 +32,6 @@ body {
 
 .sidebar ul li {
   padding: 10px 0;
-
 }
 
 .sidebar nav ul li a {
@@ -40,16 +39,26 @@ body {
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
-  
 }
 
 .logo img {
   width: 80px;
 }
 
+.sidebar nav ul li .fa {
+  font-size: 20px;
+  margin-right: 10px;
+  font-weight: 300;
+}
+
+.sidebar nav ul li a:hover {
+  color: #fff;
+}
+
 .library {
   background-color: #121212;
   border-radius: 8px;
+  min-block-size: 40px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -65,9 +74,10 @@ body {
   justify-content: space-between;
 }
 
-.library .library__button{
+.library .library__button {
   display: flex;
   margin-right: 10px;
+  font-family: "Montserrat", sans-serif;
   color: #b3b3b3;
   background-color: transparent;
   border: 0;
@@ -79,18 +89,18 @@ body {
   padding: 20px 10px;
 }
 
-.library .library__button .fa{
+.library .library__button .fa {
   font-size: 20px;
   margin-right: 10px;
   font-weight: 300;
   padding-right: 8px;
 }
 
-.library .library__content .fa-plus{
-  margin: 24px 10px;  
+.library .library__content .fa-plus {
+  margin: 24px 10px;
 }
 
-.section-playlist{
+.section-playlist {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -98,39 +108,39 @@ body {
   background-color: #242424;
   color: #b3b3b3;
   font-weight: 600;
+  min-block-size: 40px;
   font-size: 14px;
   margin: 8px 0px;
   padding: 16px 20px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
-.section-playlist .section-playlist__content{
+.section-playlist .section-playlist__content {
   display: flex;
   flex-direction: column;
-
 }
-.section-playlist__content .text{
+.section-playlist__content .text {
   padding-bottom: 14px;
   color: #fff;
 }
 
-.section-playlist__content .title{
+.section-playlist__content .title {
   font-weight: 700;
 }
 
-.section-playlist__content .subtitle{
+.section-playlist__content .subtitle {
   font-weight: 500;
   font-size: 12px;
-  
 }
 
-.section-playlist__content .section-playlist__button{
+.section-playlist__content .section-playlist__button {
   display: flex;
   justify-content: center;
   background-color: #fff;
   color: #000000;
   border-radius: 20px;
   font-size: 12px;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   text-decoration: none;
   text-transform: none;
@@ -140,18 +150,18 @@ body {
   width: 113px;
 }
 
-.sidebar .cookies{
+.sidebar .cookies {
   margin: 25px 20px;
 }
 
-.sidebar .cookies a{
+.sidebar .cookies a {
   color: #b3b3b3;
   font-weight: 500;
   font-size: 10px;
   text-decoration: none;
 }
 
-.sidebar .cookies a:hover{
+.sidebar .cookies a:hover {
   text-decoration: underline;
 }
 
@@ -183,7 +193,7 @@ body {
   margin-right: 10px;
 }
 
-.footertext{
+.footertext {
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
@@ -197,11 +207,10 @@ body {
   margin-bottom: 10px;
 }
 
-#textbot{
- color: #fff; 
- font-weight: 500;
- font-size: 14px;
-
+#textbot {
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .footerbutton {
@@ -214,10 +223,12 @@ body {
   border-radius: 40px;
   cursor: pointer;
   flex-shrink: 0;
-
 }
 
 .footerbutton:hover {
   scale: 1.05;
+}
 
+#artistlist{
+  display: none;
 }
